ENG-2134 get object content endpoint
