# server/model_file_content.go
@@ -1,0 +1,16 @@
+/*
+ * NxFs
+ *
+ * Simple file access APIs for the Entando Nx subsystem
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package nxsiteman
+
+type FileContent struct {
+	DirectoryObject
+
+	Content string `json:"content"`
+}
